--- a/src/components/ErrorPage/ErrorPage.module.css
+++ b/src/components/ErrorPage/ErrorPage.module.css
@@ -18,7 +18,7 @@
   flex-direction:column;
   justify-content:flex-start;
   align-items:center;
-  width: 100vw;
+  width: 100%;
 }
 .logoContainer{
   position: absolute;
@@ -37,11 +37,11 @@
 }
 .titulo{
   font-family: "CaroFont";
-  font-size: 100px;
+  font-size: 50px;
 }
 .btnHome{
   font-family: "CaroFont";
-  font-size: 50px;
+  font-size: 30px;
   transition: 0.2s;
 }
 .btnHome:hover {
