--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
   display:flex;
   justify-content:flex-start;
   align-items:center;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(39, 39, 39);
 }
 .logoContainer{
