--- a/src/components/Home/HomeMain.module.css
+++ b/src/components/Home/HomeMain.module.css
@@ -1,27 +1,9 @@
 .contMain{
-  background-color: rgba(218, 218, 218, 0.935);
-  width: 100vw;
-}
-.contSection{
-  min-height: 100vh;
-}
-.contArticle{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.imgDivContainer{
-  width: 50vw;
-}
-.imgDiv{
-  background-color: grey;
-  width: 700px;
-  height: 700px;
-  margin: 200px auto;
-}
-.textContainer{
-  width: 50vw;
-  padding: 0 300px;
-  border-left: 1px solid black;  
-  border-right: 1px solid black;  
+  background-image:linear-gradient(316deg, rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(../../assets/FondoArqyDis6.png);
+  background-position:bottom;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-attachment:fixed;
+  width: 100%;
+  padding-bottom: 1px;
 }
