--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -10,8 +10,27 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  transition: 0.5s;
+  position:absolute;
+  top: 0px;
+  z-index: 100;
+}
+.navBarShadow{
+  display: flex;
+  width: 100%;
+  justify-content: center;
   z-index: 10;
   transition: 0.5s;
+  position:sticky;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
+  height: 55px;
+  z-index: 100;
+  a{
+    color:rgba(255, 255, 255, 0.746);
+    transition: 0.5s;
+  }
 }
 .list{
   list-style-type: none;
@@ -24,12 +43,13 @@
   margin: 0px 10px;
   border-radius: 50px;
   transition: 0.5s;
-  a{
-    color: black;
+  .list li a{
     transition: 0.5s;
+    color:rgba(255, 255, 255, 0.746);
   }
 }
-.navBar:hover{
+.navBar:hover,
+.navBarShadow:hover {
   background-color: rgba(0, 0, 0, 0.3);
   transition: 0.5s;
   height: 55px;
