--- a/src/components/Separator/Separator.module.css
+++ b/src/components/Separator/Separator.module.css
@@ -11,7 +11,9 @@
   }
   div{
     padding: 5%;
+    text-shadow: 1px 1px 5px rgb(0, 0, 0);
     h2{
+      color: red;
       font-size: 40px;
       margin: 2% 0%;
     }
