--- a/src/components/Footer/FooterSocialLinks.module.css
+++ b/src/components/Footer/FooterSocialLinks.module.css
@@ -30,3 +30,25 @@
 .container:hover a{
   color: #d21d1d
 }
+
+@media (max-width: 800px) {
+  .container{
+    margin: 5px 0px;
+    a p{
+      font-size: 20px;
+    }
+  }
+  .container a img{
+    width: 20px;
+    margin: 0px 10px;
+  }
+}
+
+@media (max-width: 800px) and (orientation: portrait){
+  .container a p{
+    font-size: 40px;
+  }
+  .container a img{
+    width: 30px;
+  }
+}
