--- a/src/components/Home/HomeMain.module.css
+++ b/src/components/Home/HomeMain.module.css
@@ -1,4 +1,4 @@
-.contMain{
+/* .contMain{
   background-image:linear-gradient(316deg, rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(../../assets/FondoArqyDis6.png);
   background-position:bottom;
   background-repeat:no-repeat;
@@ -6,4 +6,4 @@
   background-attachment:fixed;
   width: 100%;
   padding-bottom: 1px;
-}
+} */
