--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -9,6 +9,7 @@
 .navBar{
   display: flex;
   width: 100%;
+  overflow: hidden;
   justify-content: center;
   transition: 0.5s;
   position:absolute;
@@ -19,7 +20,6 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  z-index: 10;
   transition: 0.5s;
   position:sticky;
   top: 0px;
@@ -37,15 +37,15 @@
   font-family: "CaroFont";
   display: flex;
   font-size: 25px;
-}
-.list li{
-  padding: 10px 30px;
-  margin: 0px 10px;
-  border-radius: 50px;
-  transition: 0.5s;
-  .list li a{
+  li{
+    padding: 10px 30px;
+    margin: 0px 10px;
+    border-radius: 50px;
     transition: 0.5s;
-    color:rgba(255, 255, 255, 0.746);
+    .list li a{
+      transition: 0.5s;
+      color:rgba(255, 255, 255, 0.746);
+    }
   }
 }
 .navBar:hover,
@@ -54,11 +54,11 @@
   transition: 0.5s;
   height: 55px;
   .list li a{
-      transition: 0.5s;
-      color:rgba(255, 255, 255, 0.746);
-    }
+    transition: 0.5s;
+    color:rgba(255, 255, 255, 0.746);
   }
-  .list li:hover a{
+}
+.list li:hover a{
   text-shadow: rgba(0, 0, 0, 0.8) 5px 5px 10px;
   font-size: 30px;
 }
@@ -66,4 +66,64 @@
   border:none;
   background: none;
   display: none;
+}
+
+@media (max-width:800px) {
+  .list{ 
+    font-size: 18px;
+    li{
+    padding: 5px 10px;
+    margin: 0px 5px;
+    }
+  }
+  .navBarShadow{
+    height: auto;
+  }
+}
+
+@media (max-width: 800px) and (orientation: portrait) {
+  .togglerButton{
+    display: flex;
+    z-index: 1000;
+    img{
+      width: 100px;
+    }
+  }
+  .navBar,
+  .navBarShadow{
+    display: none;
+    z-index: 10;
+    width: 100%;
+    height: 95vh;
+    background-color: rgb(39, 39, 39);
+    transition: 0s;
+    top: 0px;
+    button{
+      position: absolute;
+      right:10px;
+      top: 10px;
+    }
+    :hover{
+      width: 100%;
+      height: 95vh;
+      transition: 0s;
+      background-color: rgb(39, 39, 39);
+    }
+  }
+  .list{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    li{
+      font-size: 30px;
+      align-self: center;
+      :hover a{
+        font-size: 40px;
+      }
+      a {
+        font-size: 35px;
+        color: aliceblue;
+      }
+    }
+  }
 }
