--- a/src/components/Separator/Separator.module.css
+++ b/src/components/Separator/Separator.module.css
@@ -8,6 +8,7 @@
   img{
     filter: grayscale(100%);
     mask-image: linear-gradient(to right, black, transparent);
+    z-index: 0;
   }
   div{
     padding: 5%;
@@ -19,6 +20,39 @@
     }
     p{
       font-size: 20px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .container{
+    div{
+      h2{
+        font-size: 26px;
+      }
+      p{
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) and (orientation: portrait) {
+  .container{
+    flex-direction: column;
+    height: 100%;
+    img{
+      width: 100vw;
+      mask-image: linear-gradient(to bottom, black, transparent);
+    }
+    div{
+      padding: 10% 5%;
+      h2{
+        font-size: 60px;
+      }
+      p{
+        font-size: 28px;
+      }
     }
   }
 }
