--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@
 a{
   color: black;
 }
+body{
+  background-image:linear-gradient(316deg, rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(../../assets/FondoArqyDis6.png);
+  background-position:bottom;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-attachment:fixed;
+}
