--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -38,9 +38,10 @@
   }
 }
 
-@media (max-width: 800px) and (orientation: portrait) {
+@media (max-width: 1440px) and (orientation: portrait) {
   .container{
     height: 95vh;
+    width: 100%;
     position: relative;
     top: 0px;
   }
