--- a/src/components/Home/ArticleHome.module.css
+++ b/src/components/Home/ArticleHome.module.css
@@ -22,7 +22,7 @@
 }
 .textContainer{
   color: white;
-  width: 50vw;
+  width: 50%;
   padding: 0 5%;
   margin: 10px 0px;
   p{
@@ -47,7 +47,7 @@
   }
 }
 
-@media (max-width: 800px) and (orientation: portrait) {
+@media (max-width: 1440px) and (orientation: portrait) {
   .imgDiv{
     width: 100%;
   }
@@ -56,7 +56,7 @@
     margin: 0px;
     margin-bottom: 50px;
     div{
-      width: 100vw;
+      width: 100%;
       text-align: center;
       img{
         border-radius: 0px;
