--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -81,7 +81,7 @@
   }
 }
 
-@media (max-width: 800px) and (orientation: portrait) {
+@media (max-width: 1440px) and (orientation: portrait) {
   .togglerButton{
     display: flex;
     z-index: 1000;
@@ -92,7 +92,7 @@
   .navBar,
   .navBarShadow{
     display: none;
-    z-index: 10;
+  /*   z-index: 10;
     width: 100%;
     height: 95vh;
     background-color: rgb(39, 39, 39);
@@ -108,7 +108,7 @@
       height: 95vh;
       transition: 0s;
       background-color: rgb(39, 39, 39);
-    }
+    } */
   }
   .list{
     display: flex;
