--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -41,7 +41,7 @@
 @media (max-width: 1440px) and (orientation: portrait) {
   .container{
     height: 95vh;
-    width: 100%;
+    width: 90vw;
     position: relative;
     top: 0px;
   }
