--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -82,13 +82,6 @@
 }
 
 @media (max-width: 1440px) and (orientation: portrait) {
-  .togglerButton{
-    display: flex;
-    z-index: 1000;
-    img{
-      width: 100px;
-    }
-  }
   .navBar,
   .navBarShadow{
     display: none;
@@ -110,7 +103,7 @@
       background-color: rgb(39, 39, 39);
     } */
   }
-  .list{
+  /* .list{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -124,6 +117,13 @@
         font-size: 35px;
         color: aliceblue;
       }
+    }
+  } */
+  .togglerButton{
+    display: flex;
+    z-index: 1000;
+    img{
+      width: 100px;
     }
   }
 }
