--- a/src/components/Home/ArticleHome.module.css
+++ b/src/components/Home/ArticleHome.module.css
@@ -36,16 +36,6 @@
   margin: 20px 0px;
 }
 
-@media (max-width: 800px) {
-  .textContainer{
-    p{
-      font-size: 16px;
-    }
-  }
-  .titleContainer{
-    font-size: 32px;
-  }
-}
 
 @media (max-width: 1440px) and (orientation: portrait) {
   .imgDiv{
@@ -57,7 +47,6 @@
     margin-bottom: 50px;
     div{
       width: 100%;
-      text-align: center;
       img{
         border-radius: 0px;
         box-shadow: 0px 0px 0px black;
@@ -75,5 +64,19 @@
   }
   .contArticleL{
     flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 800px) {
+  .contArticleR,
+  .contArticleL{
+    div{
+      p{
+        font-size: 18px;
+      }
+      .titleContainer{
+        font-size: 30px;
+      }
+    }
   }
 }
