--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -56,10 +56,11 @@
   .container{
     flex-direction: column;
     height: 50vh;
+    padding-bottom: 5% 0%;
   }
   .logoContainer{
     border-right: 0px;
-    height: 49%;
+    height: 60%;
     width: 100%;
   }
   .cLogo{
@@ -73,7 +74,7 @@
   .linksContainer{
     border-top: 2px solid rgb(96, 96, 96);
     margin: 0% auto;
-    padding: 7% 0% 0% 0%;
+    padding: 2% 0%;
   }
   .btnContainer{
     width: 90px;
@@ -89,6 +90,7 @@
 
 @media (max-width: 800px) {
   .cLogo{
+    padding-top: 5%;
     font-size: 65px;
     text-shadow:  black 18px 18px,rgba(96, 96, 96, 0.8) 3px 3px 8px, rgba(96, 96, 96, 0.8) 21px 21px 8px;
   }
