--- a/src/components/Footer/FooterSocialLinks.module.css
+++ b/src/components/Footer/FooterSocialLinks.module.css
@@ -32,7 +32,7 @@
 }
 
 
-@media (max-width: 800px) and (orientation: portrait){
+@media (max-width: 1440px) and (orientation: portrait){
   .container a p{
     font-size: 40px;
   }
@@ -43,7 +43,8 @@
 
 @media (max-width: 800px) {
   .container{
-    margin: 5px 0px;
+    margin: 0px 0px;
+    padding: 10px 0px;
     a p{
       font-size: 20px;
     }
