--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -55,12 +55,11 @@
 @media (max-width: 1440px) and (orientation: portrait){
   .container{
     flex-direction: column;
-    height: 50vh;
-    padding-bottom: 5% 0%;
+    height: 40vh;
   }
   .logoContainer{
     border-right: 0px;
-    height: 60%;
+    height: 50%;
     width: 100%;
   }
   .cLogo{
@@ -72,9 +71,10 @@
     margin: 2% 0%;
   }
   .linksContainer{
+    height: 50%;
     border-top: 2px solid rgb(96, 96, 96);
-    margin: 0% auto;
-    padding: 2% 0%;
+    margin: 0%;
+    justify-content: space-evenly;
   }
   .btnContainer{
     width: 90px;
@@ -98,7 +98,7 @@
     font-size: 24px;
   }
   .container{
-    height: 30vh;
+    height: 50vh;
   }
   .btnContainer{
     width: 40px;
